--- a/src/pages/UsersSkillsPage.scss
+++ b/src/pages/UsersSkillsPage.scss
@@ -62,6 +62,7 @@
 
 .search-container{
   display: flex;
+  justify-content: space-between;
   align-items: center;
   gap: 10px;
 margin-top: 20px;
@@ -71,4 +72,12 @@ h1{
   font-size: 20px;
   margin-top: 10px;
 }
+}
+.skill{
+  display: flex !important;
+  justify-content: space-between !important;
+  p{
+    display: flex !important;
+    width: 100% !important;
+  }
 }
